overlays/testnet/monitoring/resources/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-prometheus-stack-grafana
spec:
  rules:
    - host: grafana.testnet.local
      http:
        paths:
          - backend:
              serviceName: kube-prometheus-stack-grafana
              servicePort: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
  - hosts:
    - grafana.testnet.local
    #secretName: local-tls
